--- a/Scripts/Item/Boost Pot Petal.razor
+++ b/Scripts/Item/Boost Pot Petal.razor
@@ -2,4 +2,8 @@ potion 'strength'
 wait 300
 potion 'agility'
 wait 300
-dclicktype 'feathers' [backpack] [14]
+//orange petal
+dclicktype '4129' backpack 43
+wait 300
+//trinsic petal
+dclicktype '4129' backpack 14
