--- a/Scripts/Item/Recall Runebook.razor
+++ b/Scripts/Item/Recall Runebook.razor
@@ -1,3 +1,4 @@
+//To auto select the specific runebook via the hue you set. It works through all chars. Remember to set default rune for that book and do not have 2 books with same hue.
 cast 'recall'
 wft
 targettype 'spellbook' backpack '2119'
